# rust-skyfire

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.config/: nextest.toml
.delegate/: SKYFIRE_BRIEF.tmpl
.github/workflows/: ci.yml
crates/skyfire-ac3/: Cargo.toml
crates/skyfire-ac3/src/: downmix.rs  lib.rs
crates/skyfire-cli/: Cargo.toml
crates/skyfire-cli/src/: main.rs
crates/skyfire-cli/tests/: cli_tests.rs
crates/skyfire-core/: Cargo.toml
crates/skyfire-core/src/: lib.rs
crates/skyfire-mpa/: Cargo.toml
crates/skyfire-mpa/src/: lib.rs
crates/skyfire-sync/: Cargo.toml
crates/skyfire-sync/src/: lib.rs
crates/skyfire-ts/: Cargo.toml
crates/skyfire-ts/src/: h264_config.rs  lib.rs  subtitle_compositor.rs
crates/skyfire-wasm/: Cargo.toml
crates/skyfire-wasm/src/: lib.rs
crates/skyfire-wasm/tests/: transmux_segments.rs
docs/: COSTS.md  OBJECTIVES.md
docs/decisions/: 0001-browser-and-platform-support.md  0002-delegation-working-practice.md  0003-first-release-and-test-harness.md  0004-mpeg-ts-demux-strategy.md  0005-interlaced-h264-webcodecs-wall.md  0006-server-side-deinterlace-for-mobile.md  0007-transcode-to-hls-server-thin-client.md  0008-video-only-transcode-wasm-bridge.md  0009-transmux-fmp4-mse-fallback.md  README.md
docs/superpowers/plans/: 2026-07-01-adopt-transmux.md
docs/superpowers/specs/: 2026-07-01-adopt-transmux-design.md
fixtures/: README.md  ac3-51.ts  eac3-51.ts  gulli.eac3  h264-25fps.ts  h264-mse.ts  m6-clean.ts  mp2-tone.ts
releases/v0.1.0/: index.html  package.json  skyfire.js  skyfire_wasm_bg.wasm  skyfire_wasm_bg.wasm.d.ts
releases/v0.1.1/: package.json  skyfire.js  skyfire_wasm.d.ts  skyfire_wasm.js  skyfire_wasm_bg.wasm
releases/v0.1.2/: index.html  package.json  skyfire.js  skyfire_wasm.d.ts  skyfire_wasm.js  skyfire_wasm_bg.wasm
releases/v0.1.3/: skyfire.js  skyfire_wasm.d.ts  skyfire_wasm.js  skyfire_wasm_bg.wasm.d.ts
releases/v0.1.4/: index.html  package.json  skyfire.js  skyfire_wasm_bg.wasm
scripts/: delegate.sh
web/: README.md  audio-worklet.js  bridge-guard-test.js  decode-worker.js  index.html  ios-probe.html  ios-probe.js  package.json  player.js  psf-oracle.html  psf-oracle.js  serve.ts  video-probe.html  video-probe.js
web/tests/: e2e.spec.mjs
