[package]
name = "skyfire-ac3"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AC-3 / E-AC-3 audio decoder for Skyfire (→ PCM for WebAudio). The codec browsers refuse; cheap in WASM."

[dependencies]
# The published 0.0.9 predates the E-AC-3 correctness fixes (enhanced
# coupling / BSI; issue #13). Use the local fixed source (still labelled
# 0.0.9, unreleased) until a new oxideav-ac3 is published. The PR will
# switch to the published/ git version.
oxideav-ac3 = { path = "../../../oxideav-ac3" }
