[package]
name = "skyfire-ac3"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AC-3 / E-AC-3 audio decoder for Skyfire (→ PCM for WebAudio). The codec browsers refuse; cheap in WASM."

[dependencies]
# The published 0.0.9 predates the E-AC-3 correctness fixes (enhanced
# coupling / BSI; issue #13). Pin the fixed source by git rev (CI has no
# sibling checkout, so a path dep breaks the build) until a new
# oxideav-ac3 is published to crates.io.
oxideav-ac3 = { git = "https://github.com/OxideAV/oxideav-ac3", rev = "2d56c09f3b337926208130ac8773744219024d9b" }
