[package]
name = "skyfire-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native debug CLI for Skyfire — inspect a captured .ts (PID histogram, AC-3 detection)."

[[bin]]
name = "skyfire"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skyfire-ts.workspace = true
skyfire-ac3.workspace = true

[dev-dependencies]
assert_cmd = "2"
serde_json = "1"
