[package]
name = "skyfire-ts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MPEG-TS / HLS demux for Skyfire — elementary streams + PTS extraction. Planned: rust-dvb dvb-si for PSI."

[dependencies]
dvb-pes = "0.1.0"
dvb-si = "7.3"

[dev-dependencies]
skyfire-ac3 = { path = "../../crates/skyfire-ac3" }
