[package]
name = "skyfire-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for Skyfire — exposes the engine to the JS/WebCodecs/AudioWorklet shell."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
skyfire-core.workspace = true
skyfire-ts.workspace = true
skyfire-ac3.workspace = true
dvb-si = "7.9"
wasm-bindgen = "0.2"
