[package]
name = "skyfire-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for Skyfire — exposes the engine to the JS/WebCodecs/AudioWorklet shell."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
broadcast-common = "8"
skyfire-core.workspace = true
skyfire-ts.workspace = true
skyfire-ac3.workspace = true
skyfire-mpa.workspace = true
dvb-common = "7.9"
dvb-si = "7.9"
dvb-subtitle = "0.1"
transmux = "0.4"
wasm-bindgen = "0.2"
